	chg-chio was renamed to chg-scsi, and now it will support not
	only chio.h, but also tape changer interfaces available on
	HPUX, Solaris 2.5, IRIX and possibly others.  Currently, only
	chio and HPUX are implemented.
	-Eric Schnoebelen <eric@cirr.com>

	Numerous bugs/errors were fixed in chg-chio/chg-scsi.  it now
	properly responds to -eject requests, among other things.
	- Eric Schnoebelen <eric@cirr.com>

	use vdump to dump advfs filesystems only.  -oliva

	new index generation commands.  -oliva

Version 2.4.0

	amrmtape updated to text database.  -oliva

	incorrect NO-ROOM error when dumping directly to tape fixed.
	-oliva

	--with-user and --with-group become are now required.  -oliva

	patch-system script much more configurable.  -oliva

	amindexd must get an exact match for diskname.
	-Richard Kail <e8903122@student.tuwien.ac.at> & oliva 

	fix serial number message in amflush
	-Liudvikas Bukys <bukys@cs.rochester.edu>

	removed backslashes from inside macro calls.
	un-indented # directives.
	-Gregory Neil Shapiro <gshapiro@WPI.EDU>

	bsd-security is now enabled by default.  -oliva

	fixed estimate command for XFSDUMP.
	-Mark Radleigh <radleigh@image.ucr.edu>
	& Jeff Moskow <jeff@rtr.com>

Version 2.4.0b6p1

	documented etimeout configuration option.  -oliva&jrj

	prevent a few crashes in dumper and reporter.  -jrj

	reporter would report the same host and disk for RESULTS MISSING.
	-martineau

	fix a few file-locking configure bugs.  -oliva

	chg-multi updates and bugfixes.
	-Liudvikas Bukys <bukys@cs.rochester.edu>

Version 2.4.0b6

	amindexd bugfix -Jos Alsters <Jos.Alsters@sci.kun.nl>

	New --disable-libtool configure option, for those who really don't
	want libraries to be installed.  Shared libraries won't be
	built, of course.  -oliva

	samba-related bugfixes.
	-Klaus Thiele <kth@becker-software.com>

	xfsdump, DNS and amidxtaped bugfixes. -martineau

	exclude-list support was broken, the filename was not copied
	to the gnutar argument list.